--- a/JavaUniversitySolved/src/UniversityGUI.form
+++ b/JavaUniversitySolved/src/UniversityGUI.form
@@ -290,6 +290,7 @@
         <Component class="javax.swing.JButton" name="IDeleteBtn">
           <Properties>
             <Property name="text" type="java.lang.String" value="Delete"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="IDeleteBtnActionPerformed"/>
@@ -298,6 +299,7 @@
         <Component class="javax.swing.JButton" name="IUpdateBtn">
           <Properties>
             <Property name="text" type="java.lang.String" value="Update"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="IUpdateBtnActionPerformed"/>
